# bootcamp_py

./: README.md
aula01_bootcamp/: desafio.py  exemplo_01.py  exemplo_02.py
aula02_bootcamp/: desafio.py  exercicios.py  exercicios02.py
aula03_bootcamp/: exercicios01.py  exercicios02.py  main.py
aula04_bootcamp/: exemplo.csv  exemplo_typehint.py  exercicios_dic.py  functions.py  reading_csv.py  using_lib.py
aula05_one_billion_row/: README.md
aula06_bootcamp/: main copy.py  pyproject.toml
aula07_bootcamp/: desafio.py  etl.py  exemplo_00.py  main.py  vendas.csv
aula08_bootcamp/: README.md  etl.py  pipeline.py  pyproject.toml  vendas_consolidadas.parquet
aula09_bootcamp/: README.md  hello.py  log.py  pipeline.py  pyproject.toml  singleton_decorator.py  tenacity_decorator.py
aula10_bootcamp/: pyproject.toml  usar_class.py
aula10_bootcamp/data/: exemplo.csv
aula10_bootcamp/src/: csv-teste.py  csv_classes.py
aula12_bootcamp/: create.py  database.db  desafio.py  main.py  pyproject copy.toml  pyproject.toml  read.py  read_ops.py  read_ops_2.py  read_sql.sql
aula13_bootcamp/: README.md  desafio.py  exercicio_01.py  meubanco.db  pyproject.toml
streamlit/4.QualidadeVeiculos/: car.py
